# image-manager

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  photos.db  vcpkg.json
app/: CMakeLists.txt
app/app/: Application.cpp  Application.h  album_manager.cpp  album_manager.h  images.cpp  images.h  raw_image.cpp  raw_image.h
app/tests/: test_app.cpp
data/: CMakeLists.txt
data/data/: config.cpp  config.h  directory_tree.cpp  directory_tree.h  photo_store.cpp  photo_store.h
data/include/data/: config.h  directory_tree.h
data/init/: 01-init-postgres.sh
data/model/: manager-odb.cxx  manager-odb.hxx  manager-odb.ixx  manager.h  manager.sql  store-odb.cxx  store-odb.hxx  store-odb.ixx  store.h  store.sql
data/src/: config.cpp  directory_tree.cpp
data/tests/: test_data.cpp
docker/: dev.Dockerfile  docker-compose.yml
docs/: AlbumManager - Add root.puml  App - Load album tree.puml  App - Loading image gallery.puml  Components.puml  components.puml  config.yml  image-loading.puml
files/: CMakeLists.txt
files/include/files/: tree.h
files/src/: tree.cpp
form-builder/: ImageManager.fbp  gui.cpp  gui.h
gui/: CMakeLists.txt
gui/gui/: exceptions.h  gui.cpp  gui.h  image_gallery.cpp  image_gallery.h  image_panel.cpp  image_panel.h
gui/include/gui/: gui.h
gui/src/: gui.cpp
gui/view/: gui.h  image-manager.fbp  view.cpp  view.h
model/: CMakeLists.txt
model/model/: store-odb.cxx  store-odb.hxx  store-odb.ixx  store.h
test_helper/: CMakeLists.txt
test_helper/test_helper/: helper.cpp  helper.h
